# pot

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  deny.toml
.rustme/: config.ron  (+2 more)
benchmarks/: Cargo.toml
benchmarks/benches/: benchmarks.rs
benchmarks/examples/: logs.rs
benchmarks/logs_bincode/deserialize/base/: benchmark.json  estimates.json  sample.json
benchmarks/logs_bincode/deserialize/new/: raw.csv  tukey.json
benchmarks/logs_bincode/deserialize/report/: index.html
benchmarks/logs_bincode/report/: index.html
benchmarks/logs_bincode/serialize-reuse/base/: benchmark.json  sample.json
benchmarks/logs_bincode/serialize-reuse/new/: estimates.json  raw.csv  tukey.json
benchmarks/logs_bincode/serialize-reuse/report/: index.html
benchmarks/logs_bincode/serialize/base/: estimates.json  raw.csv
benchmarks/logs_bincode/serialize/new/: benchmark.json  sample.json  tukey.json
benchmarks/logs_bincode/serialize/report/: index.html
benchmarks/logs_cbor/deserialize/base/: benchmark.json  raw.csv  tukey.json
benchmarks/logs_cbor/deserialize/new/: estimates.json  sample.json
benchmarks/logs_cbor/deserialize/report/: index.html
benchmarks/logs_cbor/report/: index.html
benchmarks/logs_cbor/serialize-reuse/base/: raw.csv
benchmarks/logs_cbor/serialize-reuse/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/logs_cbor/serialize-reuse/report/: index.html
benchmarks/logs_cbor/serialize/base/: raw.csv  tukey.json
benchmarks/logs_cbor/serialize/new/: benchmark.json  estimates.json  sample.json
benchmarks/logs_cbor/serialize/report/: index.html
benchmarks/logs_deserialize/MessagePack(named)/0/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/logs_deserialize/MessagePack(named)/base/: estimates.json  raw.csv  sample.json  tukey.json
benchmarks/logs_deserialize/MessagePack(named)/new/: estimates.json  raw.csv  sample.json  tukey.json
benchmarks/logs_deserialize/MessagePack(named)/report/: index.html
benchmarks/logs_deserialize/MessagePack/0/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/logs_deserialize/MessagePack/base/: estimates.json  raw.csv  sample.json  tukey.json
benchmarks/logs_deserialize/MessagePack/new/: estimates.json  raw.csv  sample.json  tukey.json
benchmarks/logs_deserialize/MessagePack/report/: index.html
benchmarks/logs_deserialize/report/: index.html
benchmarks/logs_pot/report/: index.html
benchmarks/logs_serialize-reuse/report/: index.html
benchmarks/logs_serialize/report/: index.html
benchmarks/report/: index.html
pot/: Cargo.toml  crate-docs.md
pot/benches/: benchmarks.rs
pot/examples/: logs.rs  preshared-symbols.rs  simple.rs
pot/src/: de.rs  error.rs  format.rs  lib.rs  reader.rs  ser.rs  tests.rs  value.rs
(+410 files in other folders)
