[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
pot = { path = "../pot" }
rand = "0.8.4"
fake = "2.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.53"
cli-table = "0.4.6"
thousands = "0.2.0"
ciborium = "0.2.0"
bincode = "1.3.3"
rmp-serde = "1.1.0"
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "benchmarks"
harness = false
