[package]
name = "pot"
version = "2.0.0"
edition = "2021"
description = "A concise binary serialization format written for `BonsaiDb`."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/khonsulabs/pot"
keywords = ["serialization", "serde"]
categories = ["encoding"]

[features]
default = []

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
tracing = { version = "0.1.30", optional = true }
byteorder = "1.4.3"
half = "2.2.1"

[dev-dependencies]
tracing-subscriber = "0.3.8"
tracing = "0.1.30"
serde_bytes = "0.11.5"
approx = "0.5.1"
