[package]
name = "pot"
version = "3.0.1"
edition = "2021"
description = "A concise binary serialization format written for `BonsaiDb`."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/khonsulabs/pot"
keywords = ["serialization", "serde"]
categories = ["encoding"]
rust-version = "1.70.0"

[features]
default = []

[dependencies]
serde = { version = "1.0.136" }
tracing = { version = "0.1.30", optional = true }
byteorder = "1.4.3"
half = "2.2.1"

[dev-dependencies]
serde_derive = "1.0.136"
tracing-subscriber = "0.3.8"
tracing = "0.1.30"
serde_bytes = "0.11.5"
approx = "0.5.1"
